v3/k8s/module-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: module-api
  namespace: klosetlab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: module-api
  template:
    metadata:
      labels:
        app: module-api
    spec:
      imagePullSecrets:
      - name: ecr-registry-secret
      containers:
      - name: module-api
        image: 862012315401.dkr.ecr.ap-northeast-2.amazonaws.com/klosetlab/module-api:35cbdb6f0f063bd6c508e29dbd3cb51318ff45fb
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
            memory: 768Mi
          limits:
            cpu: 500m
            memory: 2Gi
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 3
